[gd_scene load_steps=12 format=3 uid="uid://c0n22eswigaex"]

[ext_resource type="Script" path="res://scripts/levels/level02.gd" id="1_lt30n"]
[ext_resource type="PackedScene" uid="uid://b3wsqgeyff8hf" path="res://scene_objects/pause_menu.tscn" id="1_mqqb5"]
[ext_resource type="Texture2D" uid="uid://c5qk63a4648p5" path="res://assets/backgrounds/gato_1.png" id="2_jr3tu"]
[ext_resource type="Texture2D" uid="uid://bu4ocks1yebcp" path="res://assets/backgrounds/fondo_menu_1.jpg" id="2_nqr52"]
[ext_resource type="AudioStream" uid="uid://bjq5wlr6vrwam" path="res://assets/sfx/corazones.wav" id="4_fisxj"]
[ext_resource type="AudioStream" uid="uid://cp4rxiedr6f88" path="res://assets/sfx/hit.wav" id="5_u5dje"]
[ext_resource type="PackedScene" uid="uid://dwj5pxiyuylty" path="res://scene_objects/eyelids.tscn" id="6_74l2a"]
[ext_resource type="PackedScene" uid="uid://dcoobinnqd2hp" path="res://scene_objects/player_colirio.tscn" id="6_btcbf"]
[ext_resource type="PackedScene" uid="uid://c8rmnm4fci7qk" path="res://scene_objects/pause_button.tscn" id="8_b6tx2"]
[ext_resource type="PackedScene" uid="uid://di7ul4c0lti0h" path="res://scene_objects/win_level.tscn" id="9_ujf7m"]
[ext_resource type="PackedScene" uid="uid://4mjf4hysg5a0" path="res://scene_objects/lose_level.tscn" id="10_h4a44"]

[node name="level" type="Node2D"]
script = ExtResource("1_lt30n")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_nqr52")
centered = false

[node name="Gato1" type="Sprite2D" parent="."]
position = Vector2(1003, 656)
texture = ExtResource("2_jr3tu")
metadata/_edit_lock_ = true

[node name="PickupEffect" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_fisxj")
bus = &"sfx"

[node name="MissEffect" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_u5dje")
volume_db = -15.0
bus = &"sfx"

[node name="SpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
autostart = true

[node name="spawnLimitLeft" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(458, 711)
gizmo_extents = 100.0

[node name="spawnLimitRight" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(1112, 728)
gizmo_extents = 100.0

[node name="colirios" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Player" parent="." instance=ExtResource("6_btcbf")]
unique_name_in_owner = true
position = Vector2(792, 926)

[node name="eyelids" parent="." instance=ExtResource("6_74l2a")]
unique_name_in_owner = true

[node name="pause_button" parent="." instance=ExtResource("8_b6tx2")]

[node name="pauseMenu" parent="." instance=ExtResource("1_mqqb5")]
visible = false

[node name="win_level" parent="." instance=ExtResource("9_ujf7m")]
unique_name_in_owner = true
visible = false

[node name="lose_level" parent="." instance=ExtResource("10_h4a44")]
unique_name_in_owner = true
visible = false

[node name="WinTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="IncreaseDificultyTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="player_hit" from="Player" to="." method="_on_player_player_hit"]
[connection signal="fully_closed" from="eyelids" to="." method="_on_eyelids_fully_closed"]
[connection signal="timeout" from="WinTimer" to="." method="_on_win_timer_timeout"]
[connection signal="timeout" from="IncreaseDificultyTimer" to="." method="_on_increase_dificulty_timer_timeout"]
